--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="description" content="In the heart of Maine, where rolling landscapes and close-knit communities define the lifestyle, finding the right home is about more than square footage or market value. It’s about connection to the place and the people guiding the journey. Gina Lindsay brings a human-centered approach to real estate that resonates with homebuyers and sellers alike." />
     <meta name="keywords" content="Homes for Sale in Holden Maine, Top Realtor in Bangor ME, Real Estate Agent in Ellsworth Maine" />
-    <meta property="og:title" content="Homes for Sale in Holden, ME" />
-    <title>Homes for Sale in Holden, ME</title>
+    <meta property="og:title" content="Top Realtor in Bangor, ME" />
+    <title>Top Realtor in Bangor, ME</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -62,7 +62,7 @@
 
     <!-- Hero Section -->
     <div class="hero">
-        <h1>Homes for Sale in Holden, ME</h1>
+        <h1>Top Realtor in Bangor, ME</h1>
         <button onclick="window.location.href='tel:+12073569606'">Click Here to Call Us: 12073569606</button>
     </div>
 
